start firo integration
